fix: flex-wrap responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,10 @@ main {
   .cart-container {
     flex-direction: row-reverse;
   }
+
+  .details-container {
+    flex-wrap: wrap;
+  }
 }
 
 
